--- a/ProiectPSSC/ProiectPSSC.csproj
+++ b/ProiectPSSC/ProiectPSSC.csproj
@@ -41,13 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CoeficientNote.cs" />
     <Compile Include="IncorectNumberFormatException_2.cs" />
     <Compile Include="Nota.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="NoteInsuficienteException.cs" />
     <Compile Include="NrMatricol.cs" />
+    <Compile Include="PlainText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
